fix some minor layout issues... still not perfect in Chrome

--- a/css/app.css
+++ b/css/app.css
@@ -3,13 +3,6 @@
     display: flex;
     flex-direction: column;
 }
-#header {
-    flex:none;
-
-}
-#content {
-    flex:1 1;
-}
 #root .name {
     font-size: 28px;
 }
@@ -27,7 +20,6 @@
     text-align: center;
 }
 
-.content,
 #app {
     height: 100%;
 }
@@ -71,14 +63,24 @@
 /*SplitView content style*/
 #app .win-splitview-content {
     background-color: rgb(105,210,231);
+    display: flex;
 }
 
 #app .contenttext {
     margin-left: 20px;
     margin-top: 6px;
+    margin-bottom: 6px;
+    flex: 1;
     display: flex;
     flex-direction: column;
+    background-color: red;
+}
 
+#app #header {
+    flex:none;
+}
+#app #content {
+    flex:1;
 }
 
 /*SplitView pane show button style*/
@@ -113,10 +115,4 @@ button.win-splitview-button:after {
     font-size: 24px;
     font-family: 'Segoe MDL2 Assets', 'Symbols';
     content: "\E700";
-}
-
-
-.win-listview 
-{
-    height: 400px; 
 }
